# codex-grok-orchestrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  RELEASE.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design-principles.md  index.html  macos-upgrade.md  operations.md  windows-upgrade.md
docs/releases/: release-notes.md
examples/: profile.env.example  task-manifest.json
schemas/: task-manifest.schema.json
src/grok_worker/: __init__.py  __main__.py  acpx_runtime.py  activity_lease.py  agent_entry.py  artifact_contract.py  artifact_legacy.py  artifacts.py  cache_cmds.py  cache_fingerprint.py  cache_policy.py  capacity.py  cli.py  cli_cmds.py  clone.py  completion_events.py  config_apply.py  constants.py  continuation.py  deps.py  detached.py  disclosure.py  dispatcher.py  execution_contract.py  finalize.py  gc.py  grok_profile.py  grok_state.py  health.py  legacy.py  locks.py  models.py  (+29 more)
tests/: __init__.py  conftest.py  fake_acpx.py  path_helpers.py  subprocess_concurrency.py  test_acp_failure_visibility.py  test_acpx_runtime.py  test_active_pid.py  test_activity_lease.py  test_artifact_finalize.py  test_artifacts_patch.py  test_cache_domain_v2.py  test_cache_lease_concurrency.py  test_capacity.py  test_cli_exit_codes.py  test_cli_json_compat.py  test_clone_command_length.py  test_completion_events.py  test_config_apply.py  test_deps.py  test_detached_run.py  test_disclosure_preflight.py  test_dispatcher_capacity.py  test_execution_contract_v070.py  test_failure_retention.py  test_gc_stale_source_protection.py  test_grok_profile.py  test_grok_state.py  test_keep.py  test_legacy.py  test_metadata_safety.py  test_metrics_cache_semantics.py  test_native_backend.py  test_one_shot_metrics.py  test_one_shot_output_contract.py  test_project_mcp.py  test_prompt_cache_v2.py  test_prompt_only_and_timeouts.py  test_public_release.py  test_root_registry.py  (+11 more)
(+5 files in other folders)
