[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "grok-worker"
version = "0.5.3"
description = "Lifecycle-managed, isolated Grok workers with native and ACP backends"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["agent", "acp", "grok", "orchestration", "sandbox"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = ["typer==0.15.2", "click==8.1.8"]

[project.optional-dependencies]
dev = ["hatchling>=1.27", "mypy>=1.13", "pytest>=8.0", "ruff>=0.8"]

[project.scripts]
grok-worker = "grok_worker.cli:main"
grok-worker-agent = "grok_worker.agent_entry:main"

[project.urls]
Homepage = "https://maxxxdong.github.io/codex-grok-orchestrator/"
Repository = "https://github.com/MaxxxDong/codex-grok-orchestrator"
Issues = "https://github.com/MaxxxDong/codex-grok-orchestrator/issues"
Changelog = "https://github.com/MaxxxDong/codex-grok-orchestrator/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer/Click use function calls in defaults by design.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["grok_worker"]
